# django-colorfield

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  HISTORY.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  SECURITY.md  manage.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_example.sh  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  create-release.yml  publish-package.yml  pythonpackage.yml  test-package.yml
app_example/: admin.py  apps.py  forms.py  models.py  settings.py
app_example/migrations/: 0001_initial.py
colorfield/: admin.py  fields.py  metadata.py  serializers.py  utils.py  validators.py  version.py  widgets.py
colorfield/locale/en/LC_MESSAGES/: django.mo  django.po
colorfield/locale/es/LC_MESSAGES/: django.mo  django.po
colorfield/locale/it/LC_MESSAGES/: django.mo  django.po
colorfield/media/jscolor/: jscolor.js
colorfield/static/colorfield/: admin.js  colorfield-changelist-readonly.js  colorfield.css  colorfield.js
colorfield/static/colorfield/jscolor/: jscolor.js  jscolor.min.js
colorfield/static/colorfield/spectrum/: spectrum.js
colorfield/static/jscolor/: .demo.html.swp
colorfield/templates/colorfield/: color.html
colorfield/templates/colorfield/admin/: change_form.html  change_list.html  script.html
colorfield_example/: admin.py  apps.py  models.py  settings.py
colorfield_example/migrations/: 0001_initial.py
example/: Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt  start.sh
example/colors/: settings.py  urls.py  wsgi.py
example/colors/polls/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
example/colors/polls/migrations/: 0001_initial.py  0002_auto_20171209_1534.py
example/colors/polls/templates/polls/: base.html  detail.html  index.html  results.html
example/colors/polls/templatetags/: addclass.py
tests/: admin.py  forms.py  models.py  settings.py  test_admin.py  test_basic_form.py  test_fields.py  test_metadata.py  test_serializers.py  test_widgets.py
